--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "php-open-source-saver/jwt-auth": "^2.0",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
     "require-dev": {
